# hexagon-mlir

./: .gitignore  .gitmodules  CONTRIBUTING.md  README.md  SECURITY.md  llvm-hash-downstream.txt  local_build.sh  local_env.sh
ci/: apply_patches.sh  (+8 more)
qcom_hexagon_backend/utils/: CMakeLists.txt  clang-format.py
qcom_hexagon_backend/utils/backend/: HexagonProfilerReadMe.md
qcom_hexagon_backend/utils/include/hexagon/Conversion/HexagonMemToLLVM/: HexagonMemExternalFnNames.h
qcom_hexagon_backend/utils/lib/: CMakeLists.txt
qcom_hexagon_backend/utils/lib/Conversion/LinalgToLLVM/: FormSCFThreads.cpp
qcom_hexagon_backend/utils/lib/Transforms/: LinalgUtils.cpp  ReduceContractionRankPass.cpp
qcom_hexagon_backend/utils/test/: CMakeLists.txt  lit.cfg.py
qcom_hexagon_backend/utils/test/Conversion/AffineToLLVM/: fuse_tiled_conv.mlir
qcom_hexagon_backend/utils/test/Conversion/HexKLToLLVM/: hexkl_matmul.mlir
qcom_hexagon_backend/utils/test/Conversion/LinalgToLLVM/: collapse-address-space.mlir  cwrapper-function.mlir  fast_inverse.mlir  tile_dynamic_matmul.mlir  vtcm_tiling_crouton_constraints.mlir
qcom_hexagon_backend/utils/test/Conversion/TmTensorToLinalg/: SDPA.mlir
qcom_hexagon_backend/utils/test/Conversion/TptrToLinalg/: tptr_typeoffset.mlir
qcom_hexagon_backend/utils/test/Dialect/HexagonMem/: hexagonmem_roundtrip_memref_ops.mlir
qcom_hexagon_backend/utils/test/Transforms/: double-buffering-s1-elemwise.mlir
qcom_hexagon_backend/utils/test/Transforms/ConvTiling/: test1.mlir
qcom_hexagon_backend/utils/test/Transforms/LayoutPropagation/: sub.mlir
(+347 files in other folders)
